shared-core-rs/bindings/swift/hyperwhisper_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
typedef void (*UniffiForeignFutureFree)(uint64_t
    );
typedef void (*UniffiCallbackInterfaceFree)(uint64_t
    );
typedef struct UniffiForeignFuture {
    uint64_t handle;
    UniffiForeignFutureFree _Nonnull free;
} UniffiForeignFuture;
typedef struct UniffiForeignFutureStructU8 {
    uint8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU8;
typedef void (*UniffiForeignFutureCompleteU8)(uint64_t, UniffiForeignFutureStructU8
    );
typedef struct UniffiForeignFutureStructI8 {
    int8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI8;
typedef void (*UniffiForeignFutureCompleteI8)(uint64_t, UniffiForeignFutureStructI8
    );
typedef struct UniffiForeignFutureStructU16 {
    uint16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU16;
typedef void (*UniffiForeignFutureCompleteU16)(uint64_t, UniffiForeignFutureStructU16
    );
typedef struct UniffiForeignFutureStructI16 {
    int16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI16;
typedef void (*UniffiForeignFutureCompleteI16)(uint64_t, UniffiForeignFutureStructI16
    );
typedef struct UniffiForeignFutureStructU32 {
    uint32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU32;
typedef void (*UniffiForeignFutureCompleteU32)(uint64_t, UniffiForeignFutureStructU32
    );
typedef struct UniffiForeignFutureStructI32 {
    int32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI32;
typedef void (*UniffiForeignFutureCompleteI32)(uint64_t, UniffiForeignFutureStructI32
    );
typedef struct UniffiForeignFutureStructU64 {
    uint64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructU64;
typedef void (*UniffiForeignFutureCompleteU64)(uint64_t, UniffiForeignFutureStructU64
    );
typedef struct UniffiForeignFutureStructI64 {
    int64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructI64;
typedef void (*UniffiForeignFutureCompleteI64)(uint64_t, UniffiForeignFutureStructI64
    );
typedef struct UniffiForeignFutureStructF32 {
    float returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructF32;
typedef void (*UniffiForeignFutureCompleteF32)(uint64_t, UniffiForeignFutureStructF32
    );
typedef struct UniffiForeignFutureStructF64 {
    double returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructF64;
typedef void (*UniffiForeignFutureCompleteF64)(uint64_t, UniffiForeignFutureStructF64
    );
typedef struct UniffiForeignFutureStructPointer {
    void*_Nonnull returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructPointer;
typedef void (*UniffiForeignFutureCompletePointer)(uint64_t, UniffiForeignFutureStructPointer
    );
typedef struct UniffiForeignFutureStructRustBuffer {
    RustBuffer returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureStructRustBuffer;
typedef void (*UniffiForeignFutureCompleteRustBuffer)(uint64_t, UniffiForeignFutureStructRustBuffer
    );
typedef struct UniffiForeignFutureStructVoid {
    RustCallStatus callStatus;
} UniffiForeignFutureStructVoid;
typedef void (*UniffiForeignFutureCompleteVoid)(uint64_t, UniffiForeignFutureStructVoid
    );
typedef void (*UniffiCallbackInterfaceKeyValueStoreMethod0)(uint64_t, RustBuffer, RustBuffer* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceKeyValueStoreMethod1)(uint64_t, RustBuffer, RustBuffer, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceKeyValueStoreMethod2)(uint64_t, RustBuffer, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef struct UniffiVTableCallbackInterfaceKeyValueStore {
    UniffiCallbackInterfaceKeyValueStoreMethod0 _Nonnull get;
    UniffiCallbackInterfaceKeyValueStoreMethod1 _Nonnull set;
    UniffiCallbackInterfaceKeyValueStoreMethod2 _Nonnull delete;
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
} UniffiVTableCallbackInterfaceKeyValueStore;
void*_Nonnull uniffi_hyperwhisper_core_fn_clone_keyvaluestore(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_free_keyvaluestore(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_init_callback_vtable_keyvaluestore(UniffiVTableCallbackInterfaceKeyValueStore* _Nonnull vtable
);
RustBuffer uniffi_hyperwhisper_core_fn_method_keyvaluestore_get(void*_Nonnull ptr, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_method_keyvaluestore_set(void*_Nonnull ptr, RustBuffer key, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_hyperwhisper_core_fn_method_keyvaluestore_delete(void*_Nonnull ptr, RustBuffer key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_app_classify(RustBuffer bundle_id, RustBuffer process_name, RustBuffer host, RustBuffer title, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_app_type_from_raw(RustBuffer raw, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_app_type_prompt_value(RustBuffer app_type, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_append_trailing_space(RustBuffer text, RustBuffer mode_language, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_apply_autocapitalize(RustBuffer text, RustBuffer context, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_apply_hardened_replacement(RustBuffer text, RustBuffer word, RustBuffer replacement, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_build_create_request(RustBuffer params, RustBuffer audio_url, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_hyperwhisper_core_fn_func_assemblyai_build_poll_request(RustBuffer params, RustBuffer id, RustCallStatus *_Nonnull out_status
);